--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,15 @@
-/* You can add global styles to this file, and also import other style files */
+html{
+
+
+    body{
+        margin: 0;
+        padding: 0;
+    
+        width: 100vw;
+        height: 100vh;
+    }
+}
+
+p{
+    font-family: sans-serif;
+}
