--- a/src/app/Home/home-page/home-page.component.html
+++ b/src/app/Home/home-page/home-page.component.html
@@ -1,11 +1,13 @@
-<div>
-    <div class="navbar-home-page">
-        <app-navbar class="navbar"></app-navbar>
-    </div>
-    <div class="body-home-page">
-        <app-body-home-page></app-body-home-page>
-    </div>
-    <div class="footer-home-page">
-        <app-footer></app-footer>
+<div class="home-page-container">
+    <div class="container">
+        <div class="navbar-container">
+            <app-navbar></app-navbar>
+        </div>
+        <div class="body-container">
+            <app-body-home-page></app-body-home-page>
+        </div>
+        <div class="footer-container">
+            <app-footer></app-footer>
+        </div>
     </div>
 </div>
