--- a/src/app/Home/navbar/navbar.component.scss
+++ b/src/app/Home/navbar/navbar.component.scss
@@ -1,104 +1,140 @@
-div {
-    height: 4rem;
-    width: 100%;
-    background-color: #00d1d8;
-  
-    & > div {
+.navbar-container{
+  width: 100%;
+  background-color: #79CDCD;
+  display: flex;
+  justify-content: center;
+  &>.container{
+    height: 6.4rem;
+    width: 1024px;
+    
+    display: flex;
+    align-items: center;
+
+    &>.logo{
       display: flex;
-  
-      align-items: center;
-  
-      width: 100%;
-  
-      & > .logo {
-        width: 15%;
-        display: flex;
-        justify-content: center;
-      }
-      & > .search {
-        width: 60%;
-  
-        display: flex;
-        justify-content: center;
-        justify-content: center;
-  
-        padding: 0 0.5rem 0 0;
-        & > .search-one {
-          height: 2.5rem;
-          width: 100%;
-          display: flex;
-          background-color: #ffff;
-          border-radius: 3rem;
-          padding: 0 0.5rem 0 0.5rem;
-          & > input {
-            outline: none;
-            border: none;
-            width: 100%;
-  
-            font-size: 1rem;
-            font-weight: 00;
-  
-            color: #696969;
-          }
-        }
-      }
-      & > .cart {
-        position: relative;
-  
-        width: 10%;
-        height: 100%;
-  
+      justify-content: start;
+      width: 10%;
+      cursor: pointer;
+    }
+    &>.search{
+      width: 65%;
+      &>.row-search{
+        height: 2.6rem;
+        background-color: #ffff;
+        border-radius: 2rem;
+
         display: flex;
         align-items: center;
-        justify-content: center;
-        & > svg:hover {
+
+        padding: 0.3rem 0.5rem 0.3rem 1rem;
+        &>input{
+          outline: none;
+          border: none;
+
+          width: 93%;
+          height: 2rem;
+
+          font-size: 1.5rem;
+          color: #696969;
+        }
+        &>svg{
+          &>path{
+            fill: #79CDCD;
+
+          }
+
+        }
+        &>svg:hover{
           cursor: pointer;
-          & > path {
-            fill: #ffd700;
+          &>path{
+            fill: #FFC125;
+
           }
+
         }
-        & > .quantity {
-          position: absolute;
-          height: 1rem;
-          width: 1rem;
-          top: 0.9rem;
-          left: 55%;
-          background-color: #ffff;
-          border-radius: 50%;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          & > p {
-            font-family: sans-serif;
-            font-size: 0.8rem;
-            font-weight: 700;
-            color: red;
-          }
-        }
-      }
-      & > .user-authentication {
-        width: 15%;
-  
-        display: flex;
-        justify-content: center;
-        & > .avatar {
-          width: 0;
-        }
-        & > .authentication {
-          display: flex;
-          column-gap: 0.3rem;
-          & > p {
-            font-family: sans-serif;
-            font-weight: 700;
-            color: #ffff;
-          }
-  
-          & > p:hover {
-            color: #ffd700;
-            cursor: pointer;
-          }
-        }
+
       }
     }
+    &>.cart{
+      width: 10%;
+      height: 100%;
+      &>.box-cart{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        height: 100%;
+        width: 100%;
+        
+        &>svg{
+          &>path{
+            fill: #ffff;
+
+          }
+
+        }
+        &>svg:hover{
+          cursor: pointer;
+          &>path{
+            fill: #FFC125;
+
+          }
+
+        }
+
+        &>.quantity{
+          position: absolute;
+          top: 28px;
+          left: 55px;
+
+          height: 20px;
+          width: 20px;
+
+          display: flex;
+          align-items: center;
+          justify-content: center;
+
+          background-color: #fff;
+
+          border-radius: 50%;
+
+          &>p{
+            font-size: 1.2rem;
+            color: #EE0000;
+            font-weight: 600;
+          }
+        }
+      }
+
+
+    }
+    &>.authentication{
+      width: 15%;
+
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      &>.avatar{
+
+      }
+      &>.authen{
+        display: flex;
+        column-gap: 0.5rem;
+
+        &>p{
+          font-size: 1.2rem;
+          font-weight: 550;
+
+          color: #ffff;
+        }
+        &>p:hover{
+          color: #FFC125;
+          cursor: pointer;
+        }
+      }
+
+
+    }
   }
-  
+}
