--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,10 +6,15 @@ html{
         padding: 0;
     
         width: 100vw;
-        height: 100vh;
+        height: auto;
+
+        overflow-x: hidden;
+
     }
 }
 
 p{
     font-family: sans-serif;
+    margin: 0.2rem;
+    padding: 0;
 }
