--- a/src/app/Home/banner/banner.component.html
+++ b/src/app/Home/banner/banner.component.html
@@ -4,7 +4,7 @@
       <img src="../../../assets/samsung.png" alt="" />
     </div>
     <div class="small-banner">
-      <div class="small-banner-one">
+      <div class="small-banner-one" #carousel>
         <img src="../../../assets/iphone15.png" alt="" />
       </div>
       <div class="small-banner-two">
