--- a/src/app/Home/banner/banner.component.scss
+++ b/src/app/Home/banner/banner.component.scss
@@ -8,8 +8,10 @@
 
     padding: 1rem 0 1rem 0;
 
-    column-gap: 1rem;
     & > .big-banner {
+      display: flex;
+
+      column-gap: 1px;
       & > img {
         width: 600px;
         height: 400px;
@@ -18,13 +20,12 @@
     & > .small-banner {
       display: flex;
       flex-direction: column;
-      row-gap: 0.6rem;
       & > .small-banner-one {
         display: flex;
         justify-content: center;
         align-items: center;
         & > img {
-          width: 424px;
+          width: 407px;
           height: 195px;
         }
       }
@@ -33,8 +34,65 @@
         justify-content: center;
         align-items: center;
         & > img {
-          width: 424px;
+          width: 407px;
           height: 195px;
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .banner-container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+
+    & > .container {
+      width: 100%;
+      height: 10rem;
+      display: flex;
+
+      
+      padding: 1rem 0.5rem 1rem 0.5rem;
+      column-gap: 0.2rem;
+  
+      & > .big-banner {
+        display: flex;
+        
+        column-gap: 1px;
+        width: 60%;
+        height: 100%;
+
+        & > img {
+          height: 100%;
+          width: 100%;
+        }
+      }
+      & > .small-banner {
+        display: flex;
+        flex-direction: column;
+
+        width: 40%;
+        height: 100%;
+
+        row-gap: 0.2rem;
+        & > .small-banner-one {
+          width: 100%;
+          height: 49%;
+          &>img{
+            height: 100%;
+            width: 100%;
+          }
+
+        }
+        & > .small-banner-two {
+          width: 100%;
+          height: 49%;
+          &>img{
+            height: 100%;
+            width: 100%;
+          }
         }
       }
     }
