--- a/src/app/Home/brand/brand.component.scss
+++ b/src/app/Home/brand/brand.component.scss
@@ -5,7 +5,7 @@
     justify-content: center;
     padding: 1rem 0 1rem 0;
     &>.container{
-        width: 1024px;
+        width: 100%;
 
        
         &>.list-brand{
@@ -21,6 +21,47 @@
             &>.card-brand:hover{
                 border: 1px solid #B5B5B5;
                 cursor: pointer;
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .brand-container{
+        width: 100%;
+        height: 2rem;
+        background-color: #f5f5f5;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 0.5rem 0 0.5rem 0;
+        &>.container{
+            width: 100%;
+            height: 100%;
+            
+            display: flex;
+            justify-content: center;
+            align-items: center;
+           padding: 0 0.3rem 0 0.3rem;
+            &>.list-brand{
+                display: flex; 
+                justify-content: center;
+                width: 100%;
+                &>.card-brand{
+                    display: flex;
+                    justify-content: center;
+                    flex: 1;
+                    background-color: #fff;
+                    border: 1px solid #E8E8E8;
+                    &>svg{
+                        width: 100%;
+                        height: 100%;
+                    }
+                }
+                &>.card-brand:hover{
+                    border: 1px solid #B5B5B5;
+                    cursor: pointer;
+                }
             }
         }
     }
