--- a/src/app/Home/list-product/list-product.component.html
+++ b/src/app/Home/list-product/list-product.component.html
@@ -8,7 +8,7 @@
         </div>
         <div class="list-product" >
             <div class="list" *ngFor="let item of [].constructor(12)">
-                <app-product ></app-product>
+                <app-product class="app-product"></app-product>
             </div>
         </div>
         <div class="more">
