--- a/src/app/Home/product/product.component.scss
+++ b/src/app/Home/product/product.component.scss
@@ -1,4 +1,6 @@
-.product-card{
+
+@media only screen and (min-width: 1000px) {
+    .product-card{
     background-color: #ffff;
     width: 15.7rem;
     padding: 1rem 0 2rem 0;
@@ -6,6 +8,10 @@
     border-radius: 0.3rem;
 
     &>.img-product{
+        width: 100%;
+
+        display: flex;
+        justify-content: center;
         &>svg{
             width: 15rem;
             height: 15rem;
@@ -71,6 +77,93 @@
 
         &>.product-name{
             color: #6fbfbf;
+        }
+    }
+}
+}
+
+@media only screen and (max-width: 600px) {
+    .product-card{
+        background-color: #ffff;
+        width: 100%;
+    
+        border-radius: 0.3rem;
+
+        padding: 0.7rem 0rem 1rem 0rem;
+    
+        &>.img-product{
+            width: 100%;
+    
+            display: flex;
+            justify-content: center;
+            &>svg{
+                width: 100%;
+                height: 7rem;
+            }
+        }
+        &>.body-product-card{
+            padding:0.7rem 0.2rem 0.2rem 0.2rem;
+            &>.product-name{
+                font-size: 0.7rem;
+                font-weight: 500;
+            }
+            &>.price{
+                display: flex;
+                flex-direction: column;
+                &>.reduced-price{
+                    font-weight: 500;
+                    font-size: 0.6rem;
+                    text-decoration-line: line-through;
+                }
+                &>.unchaged-price{
+                    font-weight: 600;
+                    color: #CD0000;
+                    font-size: 0.7rem;
+                }
+
+                &>.share{
+                    display: none;
+                }
+            }
+            &>.feedback{
+                &>.quantity-feedback{
+                    display: flex;
+                    justify-content: start;
+                    align-items: center;
+                    &>p{
+                        font-size: 0.7rem;
+                        &>span{
+                            &>svg{
+                                height: 0.5rem;
+                                width: 0.5rem;
+                            }
+                        }
+                    }
+                }
+                &>.row-star{
+
+                }
+    
+            }
+            &>.box-product-info{
+                background-color: #f5f5f5;
+                padding: 0.2rem 0 0.2rem 0.2rem;
+    
+                margin-top: 0.5rem;
+    
+                display: flex;
+                flex-direction: column;
+                row-gap: 0.1rem;
+    
+                border-radius: 0.2rem;
+                &>.row{
+                    display: flex;
+                    &>p{
+                        font-size: 0.6rem;
+                    }
+                }
+            }
+    
         }
     }
 }
