--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,16 +5,16 @@ html{
         margin: 0;
         padding: 0;
     
-        width: 100vw;
+        width: 100%;
         height: auto;
 
-        overflow-x: hidden;
+        // overflow-x: hidden;
 
     }
 }
 
 p{
     font-family: sans-serif;
-    margin: 0.2rem;
+    margin: 0.1rem;
     padding: 0;
 }
