--- a/src/app/Home/navbar/navbar.component.html
+++ b/src/app/Home/navbar/navbar.component.html
@@ -28,7 +28,7 @@
         </div>
       </div>
       <div class="authentication">
-        <div class="avatar" *ngIf="true">
+        <div class="avatar" *ngIf="false">
           <svg width="50" height="50" viewBox="0 0 42 42" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
             <rect width="42" height="42" rx="21" fill="url(#pattern0_26_3)"/>
             <defs>
@@ -39,7 +39,7 @@
             </defs>
             </svg>            
         </div>
-        <div class="authen" *ngIf="false">
+        <div class="authen" *ngIf="true">
           <p>Login</p>
           <p>/</p>
           <p>Register</p>
