--- a/src/app/Home/brand/brand.component.html
+++ b/src/app/Home/brand/brand.component.html
@@ -1,7 +1,7 @@
 <div class="brand-container">
     <div class="container">
         <div class="list-brand">
-            <div class="card-brand">
+            <div class="card-brand" (click)="onClickNavigateBrand('iphone')">
                 <svg width="100" height="48" viewBox="0 0 220 48" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                     <rect width="220" height="48" fill="url(#pattern0_21_7)"/>
                     <defs>
