--- a/src/app/Home/brand/brand.component.scss
+++ b/src/app/Home/brand/brand.component.scss
@@ -1,26 +1,29 @@
-.brand-container{
-    width: 100%;
-    background-color: #f5f5f5;
-    display: flex;
-    justify-content: center;
-    padding: 1rem 0 1rem 0;
-    &>.container{
-        width: 100%;
 
-       
-        &>.list-brand{
-            display: flex; 
-            justify-content: center;
-            &>.card-brand{
-                display: flex;
+@media only screen and (min-width: 1000px) {
+    .brand-container{
+        width: 100%;
+        background-color: #f5f5f5;
+        display: flex;
+        justify-content: center;
+        padding: 1rem 0 1rem 0;
+        &>.container{
+            width: 1024px;
+    
+           
+            &>.list-brand{
+                display: flex; 
                 justify-content: center;
-                flex: 1;
-                background-color: #fff;
-                border: 1px solid #E8E8E8;
-            }
-            &>.card-brand:hover{
-                border: 1px solid #B5B5B5;
-                cursor: pointer;
+                &>.card-brand{
+                    display: flex;
+                    justify-content: center;
+                    flex: 1;
+                    background-color: #fff;
+                    border: 1px solid #E8E8E8;
+                }
+                &>.card-brand:hover{
+                    border: 1px solid #B5B5B5;
+                    cursor: pointer;
+                }
             }
         }
     }
