--- a/src/app/Home/home-page/home-page.component.html
+++ b/src/app/Home/home-page/home-page.component.html
@@ -4,7 +4,7 @@
             <app-navbar></app-navbar>
         </div>
         <div class="body-container">
-            <app-body-home-page></app-body-home-page>
+            <router-outlet></router-outlet>
         </div>
         <div class="footer-container">
             <app-footer></app-footer>
