--- a/src/app/Home/navbar/navbar.component.scss
+++ b/src/app/Home/navbar/navbar.component.scss
@@ -1,140 +1,144 @@
-.navbar-container{
-  width: 100%;
-  background-color: #79CDCD;
-  display: flex;
-  justify-content: center;
-  &>.container{
-    height: 6.4rem;
-    width: 1024px;
-    
+
+
+@media only screen and (min-width: 600px) {
+  .navbar-container{
+    width: 100%;
+    background-color: #79CDCD;
     display: flex;
-    align-items: center;
-
-    &>.logo{
-      display: flex;
-      justify-content: start;
-      width: 10%;
-      cursor: pointer;
-    }
-    &>.search{
-      width: 65%;
-      &>.row-search{
-        height: 2.6rem;
-        background-color: #ffff;
-        border-radius: 2rem;
-
-        display: flex;
-        align-items: center;
-
-        padding: 0.3rem 0.5rem 0.3rem 1rem;
-        &>input{
-          outline: none;
-          border: none;
-
-          width: 93%;
-          height: 2rem;
-
-          font-size: 1.5rem;
-          color: #696969;
-        }
-        &>svg{
-          &>path{
-            fill: #79CDCD;
-
-          }
-
-        }
-        &>svg:hover{
-          cursor: pointer;
-          &>path{
-            fill: #FFC125;
-
-          }
-
-        }
-
-      }
-    }
-    &>.cart{
-      width: 10%;
-      height: 100%;
-      &>.box-cart{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        position: relative;
-        height: 100%;
-        width: 100%;
-        
-        &>svg{
-          &>path{
-            fill: #ffff;
-
-          }
-
-        }
-        &>svg:hover{
-          cursor: pointer;
-          &>path{
-            fill: #FFC125;
-
-          }
-
-        }
-
-        &>.quantity{
-          position: absolute;
-          top: 28px;
-          left: 55px;
-
-          height: 20px;
-          width: 20px;
-
-          display: flex;
-          align-items: center;
-          justify-content: center;
-
-          background-color: #fff;
-
-          border-radius: 50%;
-
-          &>p{
-            font-size: 1.2rem;
-            color: #EE0000;
-            font-weight: 600;
-          }
-        }
-      }
-
-
-    }
-    &>.authentication{
-      width: 15%;
-
+    justify-content: center;
+    &>.container{
+      height: 6.4rem;
+      width: 1024px;
+      
       display: flex;
       align-items: center;
-      justify-content: center;
-
-      &>.avatar{
-
-      }
-      &>.authen{
+  
+      &>.logo{
         display: flex;
-        column-gap: 0.5rem;
-
-        &>p{
-          font-size: 1.2rem;
-          font-weight: 550;
-
-          color: #ffff;
-        }
-        &>p:hover{
-          color: #FFC125;
-          cursor: pointer;
+        justify-content: start;
+        width: 10%;
+        cursor: pointer;
+      }
+      &>.search{
+        width: 65%;
+        &>.row-search{
+          height: 2.6rem;
+          background-color: #ffff;
+          border-radius: 2rem;
+  
+          display: flex;
+          align-items: center;
+  
+          padding: 0.3rem 0.5rem 0.3rem 1rem;
+          &>input{
+            outline: none;
+            border: none;
+  
+            width: 93%;
+            height: 2rem;
+  
+            font-size: 1.5rem;
+            color: #696969;
+          }
+          &>svg{
+            &>path{
+              fill: #79CDCD;
+  
+            }
+  
+          }
+          &>svg:hover{
+            cursor: pointer;
+            &>path{
+              fill: #FFC125;
+  
+            }
+  
+          }
+  
         }
       }
-
-
+      &>.cart{
+        width: 10%;
+        height: 100%;
+        &>.box-cart{
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          position: relative;
+          height: 100%;
+          width: 100%;
+          
+          &>svg{
+            &>path{
+              fill: #ffff;
+  
+            }
+  
+          }
+          &>svg:hover{
+            cursor: pointer;
+            &>path{
+              fill: #FFC125;
+  
+            }
+  
+          }
+  
+          &>.quantity{
+            position: absolute;
+            top: 28px;
+            left: 55px;
+  
+            height: 20px;
+            width: 20px;
+  
+            display: flex;
+            align-items: center;
+            justify-content: center;
+  
+            background-color: #fff;
+  
+            border-radius: 50%;
+  
+            &>p{
+              font-size: 1.2rem;
+              color: #EE0000;
+              font-weight: 600;
+            }
+          }
+        }
+  
+  
+      }
+      &>.authentication{
+        width: 15%;
+  
+        display: flex;
+        align-items: center;
+        justify-content: center;
+  
+        &>.avatar{
+  
+        }
+        &>.authen{
+          display: flex;
+          column-gap: 0.2rem;
+  
+          &>p{
+            font-size: 1.2rem;
+            font-weight: 550;
+  
+            color: #ffff;
+          }
+          &>p:hover{
+            color: #FFC125;
+            cursor: pointer;
+          }
+        }
+  
+  
+      }
     }
   }
 }
@@ -279,7 +283,7 @@
         } 
         &>.authen{
           display: flex;
-          column-gap: 0.5rem;
+          column-gap: 0.2rem;
   
           &>p{
             font-size: 1.2rem;
@@ -290,6 +294,7 @@
           &>p:hover{
             color: #FFC125;
             cursor: pointer;
+            font-size: 1.2rem;
           }
         }
   
