--- a/src/app/Home/product/product.component.html
+++ b/src/app/Home/product/product.component.html
@@ -1,4 +1,4 @@
-<div class="product-card">
+<div class="product-card" (click)="onClickNavigateProuctDetail()">
   <div class="img-product">
     <svg width="466" height="540" viewBox="0 0 466 540" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
         <rect width="466" height="540" fill="url(#pattern0_36_3)"/>
