--- a/src/app/Home/list-product/list-product.component.html
+++ b/src/app/Home/list-product/list-product.component.html
@@ -7,8 +7,8 @@
             </div>
         </div>
         <div class="list-product" >
-            <div class="list" *ngFor="let item of [].constructor(12)">
-                <app-product class="app-product"></app-product>
+            <div class="list" *ngFor="let item of [].constructor(12); let index = index">
+                <app-product class="app-product" [product_id]="index"></app-product>
             </div>
         </div>
         <div class="more">
