--- a/src/app/Home/list-product/list-product.component.scss
+++ b/src/app/Home/list-product/list-product.component.scss
@@ -6,7 +6,7 @@
         display: flex;
         justify-content: center;
     
-        background-color: #f5f5f5;
+        background-color: #f9f9f9;
     
         &>.container{
             width: 1024px;
@@ -17,7 +17,7 @@
     
                 display: flex;
                 align-items: center;
-                justify-content: start;
+                justify-content: flex-start;
     
                 background-color: #ffff;
     
@@ -99,7 +99,7 @@
         display: flex;
         justify-content: center;
     
-        background-color: #f5f5f5;
+        background-color: #f9f9f9;
     
         &>.container{
             width: 100%;
@@ -111,7 +111,7 @@
     
                 display: flex;
                 align-items: center;
-                justify-content: start;
+                justify-content: flex-start;
     
                 background-color: #ffff;
     
