--- a/src/app/Home/navbar/navbar.component.scss
+++ b/src/app/Home/navbar/navbar.component.scss
@@ -1,4 +1,5 @@
-
+@import '../../../SCSS/mixins2';
+@import '../../../SCSS/variables';
 
 @media only screen and (min-width: 600px) {
   .navbar-container{
@@ -15,7 +16,7 @@
   
       &>.logo{
         display: flex;
-        justify-content: start;
+        justify-content: flex-start;
         width: 10%;
         cursor: pointer;
       }
@@ -36,13 +37,13 @@
   
             width: 93%;
             height: 2rem;
-  
-            font-size: 1.5rem;
-            color: #696969;
+            
+            @include text-14-regular;
+            color: $gray-500;
           }
           &>svg{
             &>path{
-              fill: #79CDCD;
+              fill: $blue-1;
   
             }
   
@@ -50,7 +51,7 @@
           &>svg:hover{
             cursor: pointer;
             &>path{
-              fill: #FFC125;
+              fill: $orange-600;
   
             }
   
@@ -79,7 +80,7 @@
           &>svg:hover{
             cursor: pointer;
             &>path{
-              fill: #FFC125;
+              fill: $orange-600;
   
             }
   
@@ -102,7 +103,7 @@
             border-radius: 50%;
   
             &>p{
-              font-size: 1.2rem;
+              font-size: 14px;
               color: #EE0000;
               font-weight: 600;
             }
@@ -126,13 +127,14 @@
           column-gap: 0.2rem;
   
           &>p{
-            font-size: 1.2rem;
+            @include text-14-bold;
+
             font-weight: 550;
   
             color: #ffff;
           }
           &>p:hover{
-            color: #FFC125;
+            color: $orange-600;
             cursor: pointer;
           }
         }
@@ -192,7 +194,8 @@
             width: 93%;
             height: 2rem;
   
-            font-size: 1.5rem;
+            @include text-16-regular;
+
             color: #696969;
           }
           &>svg{
@@ -205,7 +208,7 @@
           &>svg:hover{
             cursor: pointer;
             &>path{
-              fill: #FFC125;
+              fill: $orange-600;
   
             }
   
@@ -234,7 +237,7 @@
           &>svg:hover{
             cursor: pointer;
             &>path{
-              fill: #FFC125;
+              fill: $orange-600;
   
             }
   
@@ -257,7 +260,8 @@
             border-radius: 50%;
   
             &>p{
-              font-size: 1.2rem;
+              @include text-14-bold;
+
               color: #EE0000;
               font-weight: 600;
             }
@@ -286,15 +290,17 @@
           column-gap: 0.2rem;
   
           &>p{
-            font-size: 1.2rem;
+            @include text-14-regular;
+
             font-weight: 550;
   
             color: #ffff;
           }
           &>p:hover{
-            color: #FFC125;
+            color: $orange-600;
             cursor: pointer;
-            font-size: 1.2rem;
+            @include text-14-regular;
+
           }
         }
   
