--- a/src/app/Home/product-detail/product-detail.component.scss
+++ b/src/app/Home/product-detail/product-detail.component.scss
@@ -1,5 +1,8 @@
+@import '../../../SCSS/mixins2';
+@import '../../../SCSS/variables';
+
 .product-detail-container{
-    padding: 1rem 0 5rem 0;
+    padding: 2rem 0 5rem 0;
 
     display: flex;
     justify-content: center;
@@ -16,10 +19,11 @@
             &>p{
                 font-weight: 700;
                 font-size: 1.6rem;
+                margin-bottom: 0.5rem;
             }
             &>.box-like{
                 &>svg{
-
+                    cursor: pointer;
                 }
             }
             &>.box-like:hover{
@@ -110,18 +114,16 @@
         &>.price{
             display: flex;
             align-items: center;
-            column-gap: 0.5rem;
+            // column-gap: 0.3rem;
 
             height: 3rem;
             &>.reduced-price{
-                font-weight: 500;
-                font-size: 1.2rem;
+                @include text-14-regular;
                 text-decoration-line: line-through;
             }
             &>.unchaged-price{
-                font-weight: 600;
                 color: #CD0000;
-                font-size: 1.6rem;
+                @include text-16-bold;
             }
 
             &>.share{
@@ -140,7 +142,7 @@
     
                 display: flex;
                 align-items: center;
-                justify-content: start;
+                justify-content: flex-start;
     
                 background-color: #ffff;
                 
@@ -165,7 +167,30 @@
                     background-color: #79CDCD;
                 }
             }
+            &>.price{
+                display: flex;
+                align-items: center;
+                // column-gap: 0.5rem;
 
+                margin-top: 1rem;
+                padding-left: 1rem;
+    
+                height: 2rem;
+                &>.reduced-price{
+                    font-weight: 500;
+                    font-size: 1.2rem;
+                    text-decoration-line: line-through;
+                }
+                &>.unchaged-price{
+                    
+                    color: #CD0000;
+                    @include text-16-bold;
+                }
+    
+                &>.share{
+                    font-size: 1.5rem;
+                }
+            }
             &>.infor-payment{
                 padding: 1rem;
                 display: flex;
@@ -198,7 +223,9 @@
                 }
                 &>.button-buy{
                     height: 3rem;
-                    width: 15rem;
+                    width: auto;
+
+                    padding:  0 0.5rem 0 0.5rem;
 
                     border-radius: 0.5rem;
 
@@ -229,7 +256,7 @@
     
                 display: flex;
                 align-items: center;
-                justify-content: start;
+                justify-content: flex-start;
     
                 background-color: #ffff;
                 
@@ -260,7 +287,7 @@
 
 
                 &>.zebra{
-                    background-color: #f5f5f5;
+                    background-color: #f9f9f9;
                     width: 100%;
                 }
                 &>.row-infor{
