--- a/src/app/Home/product/product.component.scss
+++ b/src/app/Home/product/product.component.scss
@@ -1,3 +1,6 @@
+@import '../../../SCSS/mixins2';
+@import '../../../SCSS/variables';
+
 
 @media only screen and (min-width: 1000px) {
     .product-card{
@@ -21,8 +24,8 @@
         padding:1rem 1rem 0.5rem 1rem;
 
         &>.product-name{
-            font-size: 1.2rem;
-            font-weight: 500;
+            @include text-14-regular;
+
         }
         &>.price{
             display: flex;
@@ -41,7 +44,7 @@
         &>.feedback{
             &>.quantity-feedback{
                 display: flex;
-                justify-content: start;
+                justify-content: flex-start;
                 align-items: center;
                 &>p{
 
@@ -53,7 +56,7 @@
 
         }
         &>.box-product-info{
-            background-color: #f5f5f5;
+            background-color: #f9f9f9;
 
             padding: 1rem 0 0.5rem 0.5rem;
 
@@ -128,7 +131,7 @@
             &>.feedback{
                 &>.quantity-feedback{
                     display: flex;
-                    justify-content: start;
+                    justify-content: flex-start;
                     align-items: center;
                     &>p{
                         font-size: 0.7rem;
@@ -146,7 +149,7 @@
     
             }
             &>.box-product-info{
-                background-color: #f5f5f5;
+                background-color: #f9f9f9;
                 padding: 0.2rem 0 0.2rem 0.2rem;
     
                 margin-top: 0.5rem;
